@@ -4,6 +4,8 @@
 
 === 1.0.11 ===
 * Added wrapper around <stdlib.h>.
+* Added platform-independent lsp::qsort_r function implementation that
+  matches GNU one.
 
 === 1.0.10 ===
 * Added M_GOLD_RATIO and M_RGOLD_RATIO definitions to stdlib/math.h wrapper.
